Wrap boolean cell icons in another element to avoid clashes between icon and tooltip pseudo-elements.

--- a/src/components/search/SearchUI/SearchUI.css
+++ b/src/components/search/SearchUI/SearchUI.css
@@ -144,3 +144,7 @@
 .search-ui .filter-cancel-button {
   vertical-align: text-bottom;
 }
+
+.search-ui .boolean-cell-wrapper {
+  line-height: 1;
+}
