--- a/src/styles.less
+++ b/src/styles.less
@@ -211,6 +211,7 @@ svg.is-active {
 .fa.fa-asterisk {
   width: 15px;
   height: 15px;
+  display: inline-block;
   background-color: #3273dc;
 }
 
